--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.1",
     "react-toastify": "^11.0.5",
-    "react-tooltip": "^5.28.1"
+    "react-tooltip": "^5.28.1",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
